[gd_scene load_steps=5 format=2]

[ext_resource path="res://main_panel.tres" type="StyleBox" id=1]
[ext_resource path="res://fonts/plex_mono_24.tres" type="DynamicFont" id=2]
[ext_resource path="res://fonts/plex_mono_16.tres" type="DynamicFont" id=3]
[ext_resource path="res://SidePanel.gd" type="Script" id=4]

[node name="SidePanel" type="PanelContainer"]
margin_left = 856.0
margin_right = 984.0
margin_bottom = 560.0
rect_min_size = Vector2( 320, 0 )
custom_styles/panel = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 320.0
margin_bottom = 560.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="Rows" type="VBoxContainer" parent="MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 315.0
margin_bottom = 555.0
custom_constants/separation = 20

[node name="TitleSection" type="VBoxContainer" parent="MarginContainer/Rows"]
margin_right = 310.0
margin_bottom = 54.0
custom_constants/separation = 0

[node name="InfoLabel" type="Label" parent="MarginContainer/Rows/TitleSection"]
margin_right = 310.0
margin_bottom = 22.0
custom_colors/font_color = Color( 0.631373, 0.631373, 0.631373, 1 )
custom_fonts/font = ExtResource( 3 )
text = "You are in..."

[node name="RoomNameLabel" type="Label" parent="MarginContainer/Rows/TitleSection"]
margin_top = 22.0
margin_right = 310.0
margin_bottom = 54.0
custom_colors/font_color = Color( 0.980392, 1, 0.580392, 1 )
custom_fonts/font = ExtResource( 2 )
text = "A Room"
autowrap = true

[node name="RoomDescriptionLabel" type="Label" parent="MarginContainer/Rows"]
margin_top = 74.0
margin_right = 310.0
margin_bottom = 121.0
custom_fonts/font = ExtResource( 3 )
text = "This will be where the room's description goes."
autowrap = true

[node name="ListArea" type="VBoxContainer" parent="MarginContainer/Rows"]
margin_top = 141.0
margin_right = 310.0
margin_bottom = 483.0
size_flags_vertical = 3

[node name="ExitLabel" type="RichTextLabel" parent="MarginContainer/Rows/ListArea"]
margin_right = 310.0
margin_bottom = 23.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Exits: Option"
text = "Exits: Option"
fit_content_height = true

[node name="NpcLabel" type="RichTextLabel" parent="MarginContainer/Rows/ListArea"]
margin_top = 27.0
margin_right = 310.0
margin_bottom = 50.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Exits: Option"
text = "Exits: Option"
fit_content_height = true

[node name="ItemLabel" type="RichTextLabel" parent="MarginContainer/Rows/ListArea"]
margin_top = 54.0
margin_right = 310.0
margin_bottom = 77.0
custom_fonts/normal_font = ExtResource( 3 )
bbcode_enabled = true
bbcode_text = "Exits: Option"
text = "Exits: Option"
fit_content_height = true

[node name="HelpLabel" type="Label" parent="MarginContainer/Rows"]
margin_top = 503.0
margin_right = 310.0
margin_bottom = 550.0
custom_colors/font_color = Color( 1, 0.827451, 0.580392, 1 )
custom_fonts/font = ExtResource( 3 )
text = "You can type 'help' to see all possible commands."
autowrap = true
